// Copyright 2025 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package greeter;

option go_package = "github.com/mcpany/core/upstream_service/grpc/greeter_server/proto";

// Greeter is a service that provides greeting capabilities.
// It is used to demonstrate gRPC upstream service integration with MCP Any.
service Greeter {
  // SayHello sends a greeting to the user.
  // It accepts a HelloRequest containing the name and returns a HelloReply with the greeting message.
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// HelloRequest represents the request message containing the user's name.
message HelloRequest {
  // name is the name of the person to be greeted.
  string name = 1;
}

// HelloReply represents the response message containing the greetings.
message HelloReply {
  // message is the greeting message generated by the server.
  string message = 1;
}
